--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "buzzylab/laradown": "~0.2",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "gmostafa/php-graphql-client": "^1.4",
+        "gonoware/laravel-maps": "^1.3",
         "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "rebing/graphql-laravel": "^5.0",
-        "buzzylab/laradown": "~0.2"
+        "rebing/graphql-laravel": "^5.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
