--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "rebing/graphql-laravel": "^5.0"
+        "rebing/graphql-laravel": "^5.0",
+        "thepinecode/blade-filters": "^0.6.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
