Search build start

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "laravelcollective/html": "^6.1",
+        "mews/purifier": "^3.2",
         "rebing/graphql-laravel": "^5.0",
         "solarium/solarium": "^5.2",
         "spatie/laravel-feed": "^2.6",
