--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "gmostafa/php-graphql-client": "^1.4",
         "gonoware/laravel-maps": "^1.3",
         "guzzlehttp/guzzle": "^6.5",
+        "imliam/laravel-blade-helper": "^1.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
