--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "mews/purifier": "^3.2",
         "phpclassic/php-shopify": "^1.1",
         "phpfastcache/phpfastcache": "^8.0",
+        "predis/predis": "^1.1",
         "raiym/instagram-php-scraper": "^0.9.9",
         "rebing/graphql-laravel": "^5.0",
         "solarium/solarium": "^5.2",
