--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=fitz-web
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -14,7 +14,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=file|redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -44,3 +44,26 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
+
+YOUTUBE_API_KEY=
+RESPONSE_CACHE_ENABLED=
+
+INSTAGRAM_USER=
+INSTAGRAM_PASS=
+ELASTIC_API=
+ELASTIC_SCHEME="http"
+ELASTIC_PATH="/es"
+
+COLLECTION_URL='https://collection.beta.fitz.ms'
+
+SHOPIFY_API_KEY=
+SHOPIFY_API_PASSWORD=
+SHOPIFY_SECRET=
+
+SHIELD_USER=
+SHIELD_PASSWORD=
