Update composer for symfony kernel

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "spatie/laravel-responsecache": "^6.6",
         "symfony/cache": "^5.1",
         "thepinecode/blade-filters": "^0.6.0",
-        "thujohn/twitter": "^2.2"
+        "thujohn/twitter": "^2.2",
+        "symfony/http-kernel": "5.1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
