Amend Shopify variables Amend controller for variables Update env example Update readme Update screenshot

--- a/.env.example
+++ b/.env.example
@@ -61,9 +61,19 @@ ELASTIC_PATH="/es"
 
 COLLECTION_URL='https://collection.beta.fitz.ms'
 
-SHOPIFY_API_KEY=
-SHOPIFY_API_PASSWORD=
-SHOPIFY_SECRET=
-
 SHIELD_USER=
 SHIELD_PASSWORD=
+
+SHOPIFY_FME_API_KEY=
+SHOPIFY_FME_API_PASSWORD=
+SHOPIFY_FME_SECRET=
+SHOPIFY_FME_URL=
+SHOPIFY_FME_PROTOCOL=
+SHOPIFY_FME_CATALOGUE='/product/'
+
+SHOPIFY_FITZ_PRINTS_API_KEY=
+SHOPIFY_FITZ_PRINTS_API_PASSWORD=
+SHOPIFY_FITZ_PRINTS_SECRET=
+SHOPIFY_FITZ_PRINTS_URL=
+SHOPIFY_FITZ_PRINTS_PROTOCOL=
+SHOPIFY_FITZ_PRINTS_CATALOGUE='/products/'
