--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
         "bootstrap": "^4.5.2",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.4",
-        "lodash": "^4.17.19",
+        "laravel-mix": "^5.0.5",
+        "lodash": "^4.17.20",
+        "node-forge": ">=0.10.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.26.10",
+        "sass": "^1.26.11",
         "sass-loader": "^8.0.0",
-        "serialize-javascript": ">=3.1.0",
-        "vue-template-compiler": "^2.6.11",
+        "serialize-javascript": "^5.0.1",
+        "vue-template-compiler": "^2.6.12",
         "websocket-extensions": ">=0.1.4"
     }
 }
