--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": ">=0.21.1",
         "bootstrap": "^4.5.3",
-        "cross-env": "^7.0",
+        "cross-env": "^7.0.3",
         "jquery": "^3.5.1",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^5.0.9",
         "lodash": "^4.17.20",
         "node-forge": ">=0.10.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.27.0",
+        "sass": "^1.32.0",
         "sass-loader": "^8.0.0",
         "serialize-javascript": "^5.0.1",
         "vue-template-compiler": "^2.6.12",
