--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "symfony/cache": "^5.1",
         "thepinecode/blade-filters": "^0.6.0",
         "thujohn/twitter": "^2.2",
-        "symfony/http-kernel": "5.1.5"
+        "symfony/http-kernel": "^5.1.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
