--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "gonoware/laravel-maps": "^1.3",
         "guzzlehttp/guzzle": "^6.5",
         "imliam/laravel-blade-helper": "^1.3",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "laravelcollective/html": "^6.1",
@@ -30,7 +30,7 @@
         "predis/predis": "^1.1",
         "raiym/instagram-php-scraper": "^0.9.9",
         "rebing/graphql-laravel": "^5.0",
-        "solarium/solarium": "^6.0.0",
+        "solarium/solarium": "6.0.0",
         "spatie/laravel-feed": "^3.1.2",
         "spatie/laravel-responsecache": "^6.6",
         "symfony/cache": "^5.1",
