--- a/composer.json
+++ b/composer.json
@@ -39,10 +39,10 @@
     },
     "require-dev": {
         "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.9.2",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "fakerphp/faker": "^1.13.0"
     },
     "config": {
         "optimize-autoloader": true,
