--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-
+APP_GOOGLE_ANALYTICS=
+GOOGLE_TAG_MANAGER_ID=
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
