Change woff cors

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    <FilesMatch ".(eot|ttf|otf|woff)">
+      Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
 </IfModule>
