--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     },
     "devDependencies": {
         "axios": ">=0.21.1",
-        "bootstrap": "^4.5.3",
+        "bootstrap": "^4.6.0",
         "cross-env": "^7.0.3",
-        "jquery": "^3.5.1",
+        "is-svg": ">=4.2.2",
+        "jquery": "^3.6.0",
         "laravel-mix": "^5.0.9",
-        "lodash": "^4.17.20",
+        "lodash": "^4.17.21",
         "node-forge": ">=0.10.0",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.0",
+        "resolve-url-loader": "^3.1.3",
+        "sass": "^1.32.12",
         "sass-loader": "^8.0.0",
         "serialize-javascript": "^5.0.1",
-        "vue-template-compiler": "^2.6.12",
-        "websocket-extensions": ">=0.1.4",
         "ssri": ">=8.0.1",
-        "is-svg": ">=4.2.2"
+        "vue-template-compiler": "^2.6.12",
+        "websocket-extensions": ">=0.1.4"
     }
 }
