--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "serialize-javascript": "^5.0.1",
         "ssri": ">=8.0.1",
         "vue-template-compiler": "^2.6.12",
-        "websocket-extensions": ">=0.1.4"
+        "websocket-extensions": ">=0.1.4",
+        "url-parse": ">=1.5.0",
+        "postcss": ">=8.2.10"
     }
 }
