--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "gmostafa/php-graphql-client": "^1.4",
         "gonoware/laravel-maps": "^1.4",
         "guzzlehttp/guzzle": "^6.5",
+        "imagekit/imagekit": "^1.2",
         "imliam/laravel-blade-helper": "^1.3",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
