--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "phpfastcache/phpfastcache": "^8.0",
         "predis/predis": "^1.1",
         "raiym/instagram-php-scraper": "^0.11.1",
+        "ralouphie/mimey": "^2.1",
         "rebing/graphql-laravel": "^5.0",
         "solarium/solarium": "~6.0.0",
         "spatie/laravel-feed": "^3.1.2",
