--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "fruitcake/laravel-cors": "^2.0.3",
         "gmostafa/php-graphql-client": "^1.4",
         "gonoware/laravel-maps": "^1.4",
-        "guzzlehttp/guzzle": "^6.5",
+        "guzzlehttp/guzzle": "^7.3",
         "imagekit/imagekit": "^1.2",
         "imliam/laravel-blade-helper": "^1.3",
         "laravel/framework": "^8.0",
@@ -36,6 +36,7 @@
         "spatie/laravel-feed": "^3.1.2",
         "spatie/laravel-googletagmanager": "^2.6",
         "spatie/laravel-responsecache": "^6.6",
+        "spatie/laravel-sitemap": "^6.0",
         "symfony/cache": "^5.1",
         "symfony/http-kernel": "^5.1.5",
         "thujohn/twitter": "^2.2"
