--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "solarium/solarium": "~6.0.0",
         "spatie/laravel-feed": "^3.1.2",
         "spatie/laravel-googletagmanager": "^2.6",
+        "spatie/laravel-missing-page-redirector": "^2.7",
         "spatie/laravel-responsecache": "^6.6",
         "spatie/laravel-sitemap": "^6.0",
         "symfony/cache": "^5.1",
