Add news warning

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=fitz-web
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://fitzmuseum.cam.ac.uk
 APP_GOOGLE_ANALYTICS=
 GOOGLE_TAG_MANAGER_ID=
 LOG_CHANNEL=stack
