--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+    {
+        "type": "git",
+        "name": "fitzwilliammuseum/maps",
+        "url": "https://github.com/fitzwilliammuseum/maps.git"
+    }
+  ],
     "require": {
         "php": "^7.2.5 | ^8.0.3",
         "alaouy/youtube": "^2.2",
@@ -16,7 +23,6 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0.3",
         "gmostafa/php-graphql-client": "^1.4",
-        "gonoware/laravel-maps": "^1.4",
         "guzzlehttp/guzzle": "^7.3",
         "imagekit/imagekit": "^1.2",
         "imliam/laravel-blade-helper": "^1.3",
@@ -41,7 +47,8 @@
         "symfony/http-kernel": "^5.1.5",
         "thujohn/twitter": "^2.2",
         "upthemedia/xss-protection": "^0.0.8",
-        "xantios/mimey": "^2.2"
+        "xantios/mimey": "^2.2",
+        "fitzwilliammuseum/maps": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
