--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-template-compiler": "^2.6.12",
         "websocket-extensions": ">=0.1.4",
         "url-parse": ">=1.5.0",
-        "postcss": ">=8.2.10"
+        "postcss": ">=8.2.10",
+        "nth-check": ">=2.0.1"
     }
 }
