--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,11 @@
     },
     "require-dev": {
         "facade/ignition": "^2.0",
+        "fakerphp/faker": "^1.13.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^9.0",
-        "fakerphp/faker": "^1.13.0"
+        "sven/artisan-view": "^3.4"
     },
     "config": {
         "optimize-autoloader": true,
