Add mix to the system for css

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=203cf386b2545ff5ff2c"
 }
