--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "ansi-regex": ">=5.0.1",
         "axios": ">=0.21.1",
         "bootstrap": "^4.6.0",
         "cross-env": "^7.0.3",
+        "glob-parent": ">=5.1.2",
         "is-svg": ">=4.2.2",
         "jquery": "^3.6.0",
-        "laravel-mix": "^5.0.9",
+        "laravel-mix": "^6.0.39",
         "lodash": "^4.17.21",
         "node-forge": ">=0.10.0",
+        "nth-check": ">=2.0.1",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.3",
+        "postcss": ">=8.2.10",
+        "resolve-url-loader": "^2.3.2",
         "sass": "^1.32.12",
         "sass-loader": "^8.0.0",
         "serialize-javascript": "^5.0.1",
         "ssri": ">=8.0.1",
-        "vue-template-compiler": "^2.6.12",
-        "websocket-extensions": ">=0.1.4",
         "url-parse": ">=1.5.0",
-        "postcss": ">=8.2.10",
-        "nth-check": ">=2.0.1"
+        "vue-template-compiler": "^2.6.12",
+        "websocket-extensions": ">=0.1.4"
     }
 }
