Add hockney materials

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=4ccdd39be8c66dd9bfa6"
+    "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=7fd13497fcc06602323479aa34973ea4"
 }
