--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=2d4d0fe951c1fc788163af8ddf5ad852"
+    "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=d2aa59c95749da226839"
 }
