--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -1,17 +1,10 @@
 name: Check site for broken links
 on:
   schedule:
-    - cron: "0 0 * * 0"
-    # every Sunday at midnight
-    # see https://crontab.guru/#0_0_*_*_0
-    workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-      tags:
-        description: 'Run manually'
+    - cron: '0 0 * * 0'
+  workflow_dispatch:
+    tags:
+        description: 'Run checker manually'
 jobs:
   check-site-for-broken-links:
     runs-on: ubuntu-latest
