--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -1,10 +1,17 @@
 name: Check site for broken links
 on:
   schedule:
-    - cron: '0 0 * * 0'
-  workflow_dispatch:
-    tags:
-        description: 'Run checker manually'
+    - cron: "0 0 * * 0"
+    # every Sunday at midnight
+    # see https://crontab.guru/#0_0_*_*_0
+  workflow_dispatch: 
+    inputs: 
+      logLevel: 
+        default: warning
+        description: "Log level"
+        required: true
+      tags: 
+       description: 'Run manually'
 jobs:
   check-site-for-broken-links:
     runs-on: ubuntu-latest
