--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
-        "leaflet-iiif": "^3.0.0"
+        "leaflet-iiif": "^3.0.0",
+        "@fortawesome/fontawesome-free": "^6.1.1",
+        "@popperjs/core": "^2.11.5"
     }
 }
