--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,5 @@
 {
+    "/js/app.js": "/js/app.js?id=69957fe59048cf21fbf25978de165826",
+    "/css/app.css": "/css/app.css?id=c60c3b1b7bdeb4e4c6d3f201ca8b65ce",
     "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=9c1577a38030828bf19416b342d44ab2"
 }
