--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "ansi-regex": ">=5.0.1",
         "async": ">=2.6.4",
         "axios": ">=0.21.1",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
         "glob-parent": ">=5.1.2",
         "is-svg": ">=4.2.2",
@@ -21,7 +21,6 @@
         "node-forge": ">=1.3.0",
         "nth-check": ">=2.0.1",
         "object-path": ">=0.11.8",
-        "popper.js": "^1.12",
         "postcss": ">=8.2.10",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.12",
@@ -33,8 +32,8 @@
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
-        "leaflet-iiif": "^3.0.0",
         "@fortawesome/fontawesome-free": "^6.1.1",
-        "@popperjs/core": "^2.11.5"
+        "@popperjs/core": "^2.11.5",
+        "leaflet-iiif": "^3.0.0"
     }
 }
