--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "ansi-regex": ">=5.0.1",
-        "async": ">=2.6.4",
-        "axios": ">=0.21.1",
+        "ansi-regex": "^6.0.1",
+        "async": "^3.2.3",
+        "axios": "^0.27.2",
         "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
-        "glob-parent": ">=5.1.2",
-        "is-svg": ">=4.2.2",
+        "glob-parent": "^6.0.2",
+        "is-svg": "^4.3.2",
         "jquery": "^3.6.0",
-        "laravel-mix": "^6.0.42",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
-        "node-forge": ">=1.3.0",
+        "node-forge": "^1.3.1",
         "nth-check": ">=2.0.1",
         "object-path": ">=0.11.8",
-        "postcss": ">=8.2.10",
+        "postcss": "^8.4.13",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.12",
-        "sass-loader": "^8.0.0",
-        "serialize-javascript": "^5.0.1",
-        "ssri": ">=8.0.1",
-        "url-parse": ">=1.5.8",
-        "vue-template-compiler": "^2.6.12",
+        "sass": "^1.51.0",
+        "sass-loader": "^12.6.0",
+        "serialize-javascript": "^6.0.0",
+        "ssri": "^9.0.0",
+        "url-parse": "^1.5.10",
+        "vue-template-compiler": "^2.6.14",
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
