--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "leaflet-iiif": "^3.0.0",
-        "universalviewer": "^3.1.4"
+        "universalviewer": "^4.0.0-pre.105"
     }
 }
