--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "copy": "npm run copy-uv-html && npm run copy-uv-css",
         "copy-uv-html": "cp -R node_modules/universalviewer/dist/uv.html ./public",
         "copy-uv-css": "cp -R node_modules/universalviewer/dist/uv.css ./public/",
+        "copy-uv-assets": "cp -R node_modules/universalviewer/dist/umd/ ./public/umd/",
         "postinstall": "npm run copy"
     },
     "devDependencies": {
@@ -38,6 +39,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
+        "@xmldom/xmldom": "^0.8.2",
+        "clean-css": "^5.3.0",
         "leaflet-iiif": "^3.0.0",
         "universalviewer": "^4.0.0-pre.105"
     }
