--- a/composer.json
+++ b/composer.json
@@ -18,49 +18,49 @@
         "php": "^8.0|^8.1",
         "ext-intl": "*",
         "ext-json": "*",
-        "alaouy/youtube": "^2.2",
-        "buzzylab/laradown": "~0.2",
+        "alaouy/youtube": "^2.2.5",
+        "buzzylab/laradown": "~0.2.1",
         "conedevelopment/blade-filters": "^0.8.0",
-        "elasticsearch/elasticsearch": "^7.0",
-        "fideloper/proxy": "^4.2",
+        "elasticsearch/elasticsearch": "^7.17.0",
+        "fideloper/proxy": "^4.4.1",
         "fitzwilliammuseum/maps": "master",
-        "fruitcake/laravel-cors": "^2.0.3",
-        "gmostafa/php-graphql-client": "^1.4",
-        "guzzlehttp/guzzle": "^7.3",
-        "imagekit/imagekit": "^1.2",
-        "imliam/laravel-blade-helper": "^1.3",
-        "jmikola/geojson": "^1.0",
-        "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.2",
-        "laravelcollective/html": "^6.1",
-        "mews/purifier": "^3.2",
-        "olssonm/l5-very-basic-auth": "^6.3",
-        "phpclassic/php-shopify": "^1.1",
-        "phpfastcache/phpfastcache": "^8.0.8",
-        "predis/predis": "^1.1",
+        "fruitcake/laravel-cors": "^2.2.0",
+        "gmostafa/php-graphql-client": "^1.13",
+        "guzzlehttp/guzzle": "^7.4.2",
+        "imagekit/imagekit": "^1.2.2",
+        "imliam/laravel-blade-helper": "^1.4.3",
+        "jmikola/geojson": "^1.1.1",
+        "laravel/framework": "^8.83.11",
+        "laravel/tinker": "^2.7.2",
+        "laravel/ui": "^3.4.5",
+        "laravelcollective/html": "^6.3",
+        "mews/purifier": "^3.3.7",
+        "olssonm/l5-very-basic-auth": "^6.7",
+        "phpclassic/php-shopify": "^v1.1.22",
+        "phpfastcache/phpfastcache": "^8.1.2",
+        "predis/predis": "^1.1.10",
         "raiym/instagram-php-scraper": "^0.11.1",
-        "rebing/graphql-laravel": "^5.0",
+        "rebing/graphql-laravel": "^5.1.5",
         "solarium/solarium": "^6.2.3",
-        "spatie/laravel-feed": "^4.0",
-        "spatie/laravel-googletagmanager": "^2.6",
-        "spatie/laravel-missing-page-redirector": "^2.7",
-        "spatie/laravel-responsecache": "^6.6",
-        "spatie/laravel-sitemap": "^6.0",
-        "symfony/cache": "^5.1",
-        "symfony/http-kernel": "^5.1.5",
-        "thujohn/twitter": "^2.2",
+        "spatie/laravel-feed": "^4.1.1",
+        "spatie/laravel-googletagmanager": "^2.6.6",
+        "spatie/laravel-missing-page-redirector": "^2.9.1",
+        "spatie/laravel-responsecache": "^6.6.9",
+        "spatie/laravel-sitemap": "^6.1.0",
+        "symfony/cache": "^5.4.8",
+        "symfony/http-kernel": "^5.4.8",
+        "thujohn/twitter": "^2.3.0",
         "upthemedia/xss-protection": "^0.0.8",
-        "xantios/mimey": "^2.2"
+        "xantios/mimey": "^2.2.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.12",
-        "facade/ignition": "^2.0",
-        "fakerphp/faker": "^1.13.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^9.0",
-        "sven/artisan-view": "^3.4"
+        "barryvdh/laravel-ide-helper": "^2.12.3",
+        "facade/ignition": "^2.17.5",
+        "fakerphp/faker": "^1.19.0",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^4.3.0",
+        "phpunit/phpunit": "^9.5.20",
+        "sven/artisan-view": "^3.5.0"
     },
     "config": {
         "optimize-autoloader": true,
