--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@xmldom/xmldom": "^0.8.2",
         "clean-css": "^5.3.0",
         "leaflet-iiif": "^3.0.0",
-        "universalviewer": "^4.0.0-pre.105"
+        "universalviewer": "^4.0.0-pre.105",
+        "minimist": ">=1.2.6"
     }
 }
