--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
         "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "@xmldom/xmldom": "^0.8.2",
+        "autoprefixer": "^10.4.5",
         "clean-css": "^5.3.0",
         "leaflet-iiif": "^3.0.0",
-        "universalviewer": "^4.0.0-pre.105",
-        "minimist": ">=1.2.6"
+        "minimist": ">=1.2.6",
+        "universalviewer": "^4.0.0-pre.105"
     }
 }
