Update two packages in composer This overcomes failed composer test generated via the action on github.
This fixes #322

--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,9 @@
         "mews/purifier": "^3.3.7",
         "olssonm/l5-very-basic-auth": "^6.7",
         "phpclassic/php-shopify": "^v1.1.22",
-        "phpfastcache/phpfastcache": "*",
+        "phpfastcache/phpfastcache": "^9.0",
         "predis/predis": "^1.1.10",
-        "psr/cache": "2.0",
+        "psr/cache": "^3.0",
         "rebing/graphql-laravel": "^8.2",
         "solarium/solarium": "^6.2.3",
         "spatie/laravel-feed": "^4.1.1",
