Migrate from thujohn from aytimic

--- a/.env.example
+++ b/.env.example
@@ -50,13 +50,15 @@ TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
 TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_TOKEN_SECRET=
+TWITTER_API_VERSION=
 
 YOUTUBE_API_KEY=
 
-RESPONSE_CACHE_ENABLED=
+RESPONSE_CACHE_ENABLED=true
 
 INSTAGRAM_USER=
 INSTAGRAM_PASS=
+
 ELASTIC_API=
 ELASTIC_SCHEME="http"
 ELASTIC_PATH="/es"
