Add env key, refactor cards

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,5 @@ SHOPIFY_FITZ_PRINTS_SECRET=
 SHOPIFY_FITZ_PRINTS_URL=
 SHOPIFY_FITZ_PRINTS_PROTOCOL=
 SHOPIFY_FITZ_PRINTS_CATALOGUE='/products/'
+
+MISSING_IMAGE_URL="https://content.fitz.ms/fitz-website/assets/gallery3_roof.jpg?key=exhibition"
