--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "production": "mix --production",
-        "copy": "npm run copy-uv-html && npm run copy-uv-css",
+        "copy": "npm run copy-uv-html && npm run copy-uv-css && npm run copy-icons",
         "copy-uv-html": "cp -R node_modules/universalviewer/dist/uv.html ./public",
         "copy-uv-css": "cp -R node_modules/universalviewer/dist/uv.css ./public/",
         "copy-uv-assets": "cp -R node_modules/universalviewer/dist/umd/ ./public/umd/",
+        "copy-icons": "cp -R node_modules/super-tiny-icons/images/svg/ ./public/images/svg/",
         "postinstall": "npm run copy"
     },
     "devDependencies": {
@@ -22,6 +23,7 @@
         "is-svg": "^4.3.2",
         "jquery": "^3.6.0",
         "laravel-mix": "^6.0.43",
+        "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
         "nth-check": ">=2.0.1",
@@ -37,13 +39,14 @@
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "@xmldom/xmldom": "^0.8.2",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "10.4.5",
         "clean-css": "^5.3.0",
         "leaflet-iiif": "^3.0.0",
         "minimist": ">=1.2.6",
-        "universalviewer": "^4.0.0-pre.105"
+        "popper.js": "^1.16.1",
+        "super-tiny-icons": "^0.4.0",
+        "universalviewer": "^4.0.0-pre.107"
     }
 }
