--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
-        "nth-check": ">=2.0.1",
+        "nth-check": "^2.1.1",
         "object-path": ">=0.11.8",
-        "postcss": "^8.4.13",
+        "postcss": "^8.4.14",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.51.0",
-        "sass-loader": "^12.6.0",
+        "sass": "^1.52.1",
+        "sass-loader": "^13.0.0",
         "serialize-javascript": "^6.0.0",
-        "ssri": "^9.0.0",
+        "ssri": "^9.0.1",
         "url-parse": "^1.5.10",
         "vue-template-compiler": "^2.6.14",
         "websocket-extensions": ">=0.1.4"
@@ -52,7 +52,7 @@
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
         "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.0-pre.107",
+        "universalviewer": "^4.0.0-pre.108",
         "vanilla-cookieconsent": "^2.8.0"
     }
 }
