--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "ansi-regex": "^6.0.1",
         "async": "^3.2.3",
         "axios": "^0.27.2",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^5.2.0-beta1",
         "cross-env": "^7.0.3",
         "glob-parent": "^6.0.2",
         "is-svg": "^4.3.2",
