--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,11 @@
         "psr/cache": "^3.0",
         "rebing/graphql-laravel": "^8.2",
         "solarium/solarium": "^6.2.3",
+        "spatie/laravel-ignition": "^1.2.3",
         "spatie/laravel-feed": "^4.1.4",
         "spatie/laravel-googletagmanager": "^2.6.6",
         "spatie/laravel-missing-page-redirector": "^2.9.2",
-        "spatie/laravel-responsecache": "^7.3.0",
+        "spatie/laravel-responsecache": "^7.3.1",
         "spatie/laravel-sitemap": "^6.1.0",
         "symfony/cache": "^6.1.0",
         "symfony/http-kernel": "^6.2.x-dev",
@@ -68,7 +69,6 @@
         "mockery/mockery": "^1.5.0",
         "nunomaduro/collision": "^6.2",
         "phpunit/phpunit": "^9.5.20",
-        "spatie/ignition": "^1.3",
         "sven/artisan-view": "^3.5"
     },
     "config": {
