--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
         "ansi-regex": "^6.0.1",
         "async": "^3.2.3",
         "axios": "^0.27.2",
-        "bootstrap": "^5.2.0-beta1",
+        "bootstrap": "^5.1.3",
         "cross-env": "^7.0.3",
         "glob-parent": "^6.0.2",
         "is-svg": "^4.3.2",
         "jquery": "^3.6.0",
-        "laravel-mix": "^6.0.43",
+        "laravel-mix": "^6.0.45",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
@@ -34,7 +34,7 @@
         "object-path": ">=0.11.8",
         "postcss": "^8.4.14",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.52.1",
+        "sass": "^1.52.2",
         "sass-loader": "^13.0.0",
         "serialize-javascript": "^6.0.0",
         "ssri": "^9.0.1",
@@ -52,7 +52,7 @@
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
         "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.0-pre.108",
+        "universalviewer": "^4.0.0",
         "vanilla-cookieconsent": "^2.8.0"
     }
 }
