--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
         "glob-parent": "^6.0.2",
         "is-svg": "^4.3.2",
         "jquery": "^3.6.0",
-        "laravel-mix": "^6.0.45",
-        "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
         "nth-check": "^2.1.1",
@@ -40,7 +38,9 @@
         "ssri": "^9.0.1",
         "url-parse": "^1.5.10",
         "vue-template-compiler": "^2.6.14",
-        "websocket-extensions": ">=0.1.4"
+        "websocket-extensions": ">=0.1.4",
+        "vite": "^2.9.12",
+        "laravel-vite-plugin": "^0.2.2"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
