--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "atymic/twitter": "^3.1",
         "codeat3/blade-fluentui-system-icons": "^1.28.1",
         "conedevelopment/blade-filters": "^1.0",
-        "diglactic/laravel-breadcrumbs": "^7.2",
+        "diglactic/laravel-breadcrumbs": "^v8.0.0",
         "elasticsearch/elasticsearch": "^7.17.0",
         "fitzwilliammuseum/instagram-php-scraper": "master",
         "fitzwilliammuseum/maps": "master",
