Update the .env.example file. This closes #482

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,18 @@ APP_NAME=fitz-web
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://fitzmuseum.cam.ac.uk
+APP_URL=
+
 APP_GOOGLE_ANALYTICS=
 GOOGLE_TAG_MANAGER_ID=
-LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+LOG_CHANNEL=
+
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -20,9 +22,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -63,7 +65,7 @@ ELASTIC_API=
 ELASTIC_SCHEME="http"
 ELASTIC_PATH="/es"
 
-COLLECTION_URL='https://collection.beta.fitz.ms'
+COLLECTION_URL=
 
 SHIELD_USER=
 SHIELD_PASSWORD=
@@ -82,4 +84,14 @@ SHOPIFY_FITZ_PRINTS_URL=
 SHOPIFY_FITZ_PRINTS_PROTOCOL=
 SHOPIFY_FITZ_PRINTS_CATALOGUE='/products/'
 
+TESSITURA_API_URL=
+TESSITURA_LOCATION=
+TESSITURA_USER_ID=
+TESSITURA_PASSWORD=
+TESSITURA_MACHINE_NAME=
+
+IMGKIT_PUBLIC_KEY=
+IMGKIT_PRIVATE_KEY=
+IMGKIT_ENDPOINT=
 MISSING_IMAGE_URL="https://content.fitz.ms/fitz-website/assets/gallery3_roof.jpg?key=exhibition"
+DIRECTUS_URL="https://content.fitz.ms/fitz-website/items/"
