--- a/package.json
+++ b/package.json
@@ -32,27 +32,27 @@
         "node-forge": "^1.3.1",
         "nth-check": "^2.1.1",
         "object-path": ">=0.11.8",
-        "postcss": "^8.4.14",
+        "postcss": "^8.4.16",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.54.0",
+        "sass": "^1.54.5",
         "sass-loader": "^13.0.2",
         "serialize-javascript": "^6.0.0",
         "ssri": "^9.0.1",
         "url-parse": "^1.5.10",
-        "vue-template-compiler": "^2.7.8",
+        "vue-template-compiler": "^2.7.9",
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.5",
+        "@popperjs/core": "^2.11.6",
         "@xmldom/xmldom": "^0.8.2",
-        "autoprefixer": "10.4.7",
+        "autoprefixer": "^10.4.8",
         "clean-css": "^5.3.1",
         "leaflet-iiif": "^3.0.0",
         "minimist": ">=1.2.6",
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
         "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.3",
-        "vanilla-cookieconsent": "^2.8.4"
+        "universalviewer": "^4.0.8",
+        "vanilla-cookieconsent": "^2.8.5"
     }
 }
