Update env example and fix exhibitions card component

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,11 @@ ELASTIC_API=
 ELASTIC_SCHEME="http"
 ELASTIC_PATH="/es"
 
+SOLR_HOST=
+SOLR_PORT=
+SOLR_PATH=
+SOLR_CORE=
+
 COLLECTION_URL=
 
 SHIELD_USER=
