--- a/package.json
+++ b/package.json
@@ -20,39 +20,39 @@
     "devDependencies": {
         "ansi-regex": "^6.0.1",
         "async": "^3.2.4",
-        "axios": "^0.27.2",
-        "bootstrap": "^5.2.0",
+        "axios": "^1.1.3",
+        "bootstrap": "^5.2.2",
         "cross-env": "^7.0.3",
         "glob-parent": "^6.0.2",
         "is-svg": "^4.3.2",
-        "jquery": "^3.6.0",
+        "jquery": "^3.6.1",
         "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
         "nth-check": "^2.1.1",
         "object-path": ">=0.11.8",
-        "postcss": "^8.4.16",
+        "postcss": "^8.4.18",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.54.5",
-        "sass-loader": "^13.0.2",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.1.0",
         "serialize-javascript": "^6.0.0",
-        "ssri": "^9.0.1",
+        "ssri": "^10.0.0",
         "url-parse": "^1.5.10",
-        "vue-template-compiler": "^2.7.9",
+        "vue-template-compiler": "^2.7.13",
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
-        "@xmldom/xmldom": "^0.8.2",
-        "autoprefixer": "^10.4.8",
+        "@xmldom/xmldom": "^0.8.4",
+        "autoprefixer": "^10.4.13",
         "clean-css": "^5.3.1",
         "leaflet-iiif": "^3.0.0",
-        "minimist": ">=1.2.6",
+        "minimist": "^1.2.7",
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
         "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.8",
-        "vanilla-cookieconsent": "^2.8.5"
+        "universalviewer": "^4.0.9",
+        "vanilla-cookieconsent": "^2.8.8"
     }
 }
