--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
     "devDependencies": {
         "ansi-regex": "^6.0.1",
         "async": "^3.2.4",
-        "axios": "^1.1.3",
-        "bootstrap": "^5.2.2",
+        "axios": "^1.2.6",
+        "bootstrap": "^5.2.3",
         "cross-env": "^7.0.3",
         "glob-parent": "^6.0.2",
         "is-svg": "^4.3.2",
-        "jquery": "^3.6.1",
         "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
         "node-forge": "^1.3.1",
         "nth-check": "^2.1.1",
         "object-path": ">=0.11.8",
-        "postcss": "^8.4.19",
+        "postcss": "^8.4.21",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.56.1",
+        "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
-        "serialize-javascript": "^6.0.0",
-        "ssri": "^10.0.0",
+        "serialize-javascript": "^6.0.1",
+        "ssri": "~10.0.1",
         "url-parse": "^1.5.10",
         "vue-template-compiler": "^2.7.14",
         "websocket-extensions": ">=0.1.4"
@@ -46,13 +45,13 @@
         "@popperjs/core": "^2.11.6",
         "@xmldom/xmldom": "^0.8.6",
         "autoprefixer": "^10.4.13",
-        "clean-css": "^5.3.1",
+        "clean-css": "^5.3.2",
         "leaflet-iiif": "^3.0.0",
         "minimist": "^1.2.7",
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
         "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.10",
-        "vanilla-cookieconsent": "^2.8.8"
+        "universalviewer": "^4.0.17",
+        "vanilla-cookieconsent": "^2.8.9"
     }
 }
