--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "devDependencies": {
         "ansi-regex": "^6.0.1",
         "async": "^3.2.4",
-        "axios": "^1.2.6",
+        "axios": "^1.3.4",
         "bootstrap": "^5.2.3",
         "cross-env": "^7.0.3",
         "glob-parent": "^6.0.2",
-        "is-svg": "^4.3.2",
+        "is-svg": "^5.0.0",
         "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.21",
@@ -33,8 +33,8 @@
         "object-path": ">=0.11.8",
         "postcss": "^8.4.21",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.57.1",
-        "sass-loader": "^13.2.0",
+        "sass": "~1.60.0",
+        "sass-loader": "^13.2.2",
         "serialize-javascript": "^6.0.1",
         "ssri": "~10.0.1",
         "url-parse": "^1.5.10",
@@ -42,16 +42,16 @@
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.6",
+        "@popperjs/core": "^2.11.7",
         "@xmldom/xmldom": "^0.8.6",
-        "autoprefixer": "^10.4.13",
+        "autoprefixer": "^10.4.14",
         "clean-css": "^5.3.2",
         "leaflet-iiif": "^3.0.0",
-        "minimist": "^1.2.7",
+        "minimist": "^1.2.8",
         "pannellum": "^2.5.6",
         "popper.js": "^1.16.1",
-        "super-tiny-icons": "^0.4.0",
-        "universalviewer": "^4.0.17",
+        "super-tiny-icons": "^0.5.0",
+        "universalviewer": "^4.0.18",
         "vanilla-cookieconsent": "^2.8.9"
     }
 }
