--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "xantios/mimey": "^2.2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.12.3",
         "fakerphp/faker": "^1.20.0",
         "mockery/mockery": "^1.5.0",
