--- a/package.json
+++ b/package.json
@@ -31,19 +31,19 @@
         "node-forge": "^1.3.1",
         "nth-check": "^2.1.1",
         "object-path": ">=0.11.8",
-        "postcss": "^8.4.21",
+        "postcss": "^8.4.23",
         "resolve-url-loader": "^5.0.0",
-        "sass": "~1.60.0",
+        "sass": "^1.62.0",
         "sass-loader": "^13.2.2",
         "serialize-javascript": "^6.0.1",
-        "ssri": "~10.0.1",
+        "ssri": "^10.0.3",
         "url-parse": "^1.5.10",
         "vue-template-compiler": "^2.7.14",
         "websocket-extensions": ">=0.1.4"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.7",
-        "@xmldom/xmldom": "^0.8.6",
+        "@xmldom/xmldom": "^0.8.7",
         "autoprefixer": "^10.4.14",
         "clean-css": "^5.3.2",
         "leaflet-iiif": "^3.0.0",
