--- a/public/.htaccess
+++ b/public/.htaccess
@@ -27,7 +27,24 @@
     Redirect 301 /learning /learn-with-us
     Redirect 301 /about-us/work-for-us /about-us/work-with-us
     Redirect 301 /plan-your-visit/family-visiting-tips /plan-your-visit/families
-
+    Redirect 301 /commercial-services/gallery-hire /commercial-services/venue-hire
+    Redirect 301 /about-us/history-of-the-building-and-collections /about-us/our-history
+    Redirect 301 /plan-your-visit/accessibility-and-our-facilities /plan-your-visit/accessibility-and-facilities
+    Redirect 301 /plan-your-visit/family-visiting-tips /plan-your-visit/families
+    Redirect 301 /about-us/the-fitzwilliam-today /about-us/syndicate-and-supporters
+    Redirect 301 /about-us/our-mission /about-us/our-mission-and-values
+    Redirect 301 /objects-and-artworks/highlights/themes/religious-art /objects-and-artworks/highlights/themes/religion
+    Redirect 301 /objects-and-artworks/highlights/themes/domestic-art /objects-and-artworks/highlights/themes/domestic
+    Redirect 301 /objects-and-artworks/highlights/themes/perceptions-of-people /objects-and-artworks/highlights/themes/people
+    Redirect 301 /objects-and-artworks/highlights/themes/perceptions-of-places /objects-and-artworks/highlights/themes/places
+    Redirect 301 /learning/planning-a-school-visit /learning/plan-your-school-visit
+    Redirect 301 /objects-and-artworks/highlights/periods/20th-century /objects-and-artworks/highlights/periods/1900s
+    Redirect 301 /objects-and-artworks/highlights/periods/19th-century /objects-and-artworks/highlights/periods/1800s
+    Redirect 301 /objects-and-artworks/highlights/periods/18th-century /objects-and-artworks/highlights/periods/1700s
+    Redirect 301 /visit-us/library-regulations /visit-us/reference-library
+    Redirect 301 /support-us/friends-of-the-fitzwilliam /support-us/become-a-friend
+    Redirect 301 /support-us/donate /support-us/make-a-donation
+    Redirect 301 /support-us/purchase-a-gift-membership /support-us/give-a-gift-membership
 </IfModule>
 <IfModule mod_deflate.c>
   AddOutputFilterByType DEFLATE application/javascript
