--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.6",
+        "@splidejs/splide": "^4.1.4",
         "@xmldom/xmldom": "^0.8.2",
         "autoprefixer": "^10.4.8",
         "clean-css": "^5.3.1",
