--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=cacac191aa70c2770fe7a7a8c34bac67",
-    "/css/app.css": "/css/app.css?id=07cfa914896ea67a36dc579a5858c687",
+    "/js/app.js": "/js/app.js?id=c0b807f434b81908fa8af0dcebbe7726",
+    "/js/image-gallery.js": "/js/image-gallery.js?id=0eb9545da5780aae2385fc88a90a1402",
+    "/css/app.css": "/css/app.css?id=c629207fb66b2fcb76045bd709297ebb",
     "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=20b1e52daa83b44cc3aece9f6b305a2d"
 }
