--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=c0b807f434b81908fa8af0dcebbe7726",
-    "/css/app.css": "/css/app.css?id=c51ebb254b6183f333bc0bb311bd181d",
+    "/js/image-gallery.js": "/js/image-gallery.js?id=7b706cd2391717044e3c0e8395b354f6",
+    "/css/app.css": "/css/app.css?id=959e53028c158f3e84ff6953a334619b",
     "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=20b1e52daa83b44cc3aece9f6b305a2d"
 }
