--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=b8905b220a3026e29c691fbcf7f1ab86",
-    "/css/app.css": "/css/app.css?id=c77e47e067d8b347e47c65c32b2a3587",
+    "/js/image-gallery.js": "/js/image-gallery.js?id=d69a0e28c98ea4361c052ddbf98dd62d",
+    "/css/app.css": "/css/app.css?id=e815175d7f4ba184fe6267ac7fa4ac07",
     "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=36320d096c399350614b372ec7c4975b"
 }
