--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js?id=b9d7374b64ead9de7a9861c23829d343",
-    "/js/image-gallery.js": "/js/image-gallery.js?id=c16c44469210a3f1c08ae3face70f183",
-    "/css/app.css": "/css/app.css?id=f4a8404fe3e8fc46530c2b083c4dab68",
+    "/js/image-gallery.js": "/js/image-gallery.js?id=d69a0e28c98ea4361c052ddbf98dd62d",
+    "/js/events-carousel.js": "/js/events-carousel.js?id=23f1697a340725b2e4be739810fbfe74",
+    "/css/app.css": "/css/app.css?id=4b97ec97e2474d4f3fac4c4b078075e7",
     "/css/fitzwilliam.css": "/css/fitzwilliam.css?id=36320d096c399350614b372ec7c4975b"
 }
