--- a/composer.json
+++ b/composer.json
@@ -20,29 +20,25 @@
         }
     ],
     "require": {
-        "php": "^8.0|^8.1",
+        "php": "^8.0|^8.1|^8.2",
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "alaouy/youtube": "^2.2.5",
-        "arcanedev/laravel-markdown": "^6.0",
         "atymic/twitter": "^3.1",
         "codeat3/blade-fluentui-system-icons": "^1.30.1",
         "conedevelopment/blade-filters": "^1.0",
-        "diglactic/laravel-breadcrumbs": "^v8.0.0",
+        "diglactic/laravel-breadcrumbs": "^v8.1.0",
         "elasticsearch/elasticsearch": "^7.17.0",
         "fitzwilliammuseum/instagram-php-scraper": "master",
         "fitzwilliammuseum/maps": "master",
-        "fruitcake/laravel-cors": "^3.0.0",
         "gmostafa/php-graphql-client": "^1.13",
         "guzzlehttp/guzzle": "^7.4.5",
-        "imagekit/imagekit": "^2.0.0",
         "imliam/laravel-blade-helper": "^1.4.3",
         "jmikola/geojson": "^1.1.1",
-        "laravel/framework": "^9.25",
+        "laravel/framework": "^10.0",
         "laravel/tinker": "^2.7.2",
-        "laravel/ui": "^3.4.6",
-        "laravelcollective/html": "^6.3",
+        "laravel/ui": "^4.0.0",
         "mews/purifier": "^3.3.8",
         "olssonm/l5-very-basic-auth": "^6.7",
         "owenvoke/blade-fontawesome": "^2.0",
@@ -52,9 +48,11 @@
         "psr/cache": "^3.0",
         "rebing/graphql-laravel": "^8.3",
         "solarium/solarium": "^6.2.6",
-        "spatie/laravel-ignition": "^1.3.1",
         "spatie/laravel-feed": "^4.1.4",
         "spatie/laravel-googletagmanager": "^2.6.6",
+        "spatie/laravel-html": "^3.12",
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-markdown": "^2.7.1",
         "spatie/laravel-missing-page-redirector": "^2.9.2",
         "spatie/laravel-responsecache": "^7.4.1",
         "spatie/laravel-sitemap": "^6.2.0",
