--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "production": "mix --production",
-        "copy": "npm run copy-uv-html && npm run copy-uv-css && npm run copy-icons && npm run copy-cookie-css && npm run copy-cookie-js",
+        "copy": "npm run copy-uv-html && npm run copy-uv-css && npm run copy-icons && npm run copy-cookie-css",
         "copy-uv-html": "cp -R node_modules/universalviewer/dist/uv.html ./public",
         "copy-uv-css": "cp -R node_modules/universalviewer/dist/uv.css ./public/",
         "copy-uv-assets": "cp -R node_modules/universalviewer/dist/umd/ ./public/umd/",
         "copy-icons": "cp -R node_modules/super-tiny-icons/images/svg/ ./public/images/svg/",
         "copy-cookie-css": "cp -R node_modules/vanilla-cookieconsent/dist/*.css ./resources/css/",
-        "copy-cookie-js": "cp -R node_modules/vanilla-cookieconsent/dist/*.js ./resources/js/",
         "copy-pannellum-css": "cp -R node_modules/pannellum/build/*.css ./public/css/",
         "copy-pannellum-js": "cp -R node_modules/pannellum/build/*.js ./public/js/",
         "postinstall": "npm run copy"
